--- a/index.html
+++ b/index.html
@@ -1,3 +1,7 @@
+<head>
+    <title>LDesign</title>
+</head>
+
 <h1 id="logo">L E D A     L I T R I C I N</h1>
 
 <div class="headerbuttons">
@@ -13,4 +17,27 @@
 
 <div class="homepagephotos">
     <img src="photos/whiteandblackkitchentabletvhouse.jpg" alt="whiteandblackkitchentabletvhouse">
+</div>
+
+<div class="aboutsection">
+    <h1 id="aboutheader">About</h1>
+    <img src="photos/clientimage.jpg" alt="clientimage">
+    <p id="aboutinfo">
+        Rodjena u Beogradu. Pohadjala studije Arhitekture u Beogradu I diplomirala 2002 godine (M.Arch.) Na
+        fakultetu pohadjala izabrano dvogodisnje usmerenje u oblasti Enterijerijerskog dizajna . Nakon
+        diplomiranja, polagala I stekla licencu odgovornog projektanta. Tokom studija provela 2 lepe i znacajne
+        godine zivota u Londonu (UK).
+        Radno iskustvo steceno u Srbiji (Beogradu) I internacionalno -na velikim projektima (Dubai-UAE,
+        Shanghai-China, Almaty-Kazahstan ,Ontario-Canada) Skoro 20 godina rada u oblastima arhitektonskog I
+        enterijerskog dizajna, dizajn koordinacije, menadzmenta I projektantskog nadzora.
+        Nakon vise godina provedenih u radu na komercijalnim projektima za lokalne I nternacionalne firme,
+        2015 zapocinjem samostalan rad u polju enterijerijerskog dizajna I njegovog izvodjenja. Najvise uzivam
+        u kreiranju rezidencijalnih enterijera - autenticnih prostora za autenticne ljude koji zive svoje uzurbane
+        zivote u Beogradu, pa I sire.
+    </p>
+</div>
+
+<div class="servicessection">
+    <h1 id="servicesheader">Services</h1>
+
 </div>
