made header items in line with each other

--- a/index.html
+++ b/index.html
@@ -2,17 +2,22 @@
     <title>LDesign</title>
 </head>
 
-<h1 id="logo">L E D A     L I T R I C I N</h1>
-
 <div class="headerbuttons">
-    <h1 id="homebutton">HOME</h1>
-    <h1 id="aboutbutton">ABOUT</h1>
-    <h1 id="servicesbutton">SERVICES</h1>
-    <h1 id="portfoliobutton">PORTFOLIO</h1>
-    <h1 id="contactbutton">CONTACT</h1>
-    <h1 id="englishbutton">EN</h1>
-    <h1 id="languagedivider">|</h1>
-    <h1 id="serbianbutton">SR</h1>
+    <table style="width:100%">
+        <tr>
+            <th>L E D A     L I T R I C I N</th>
+            <th>HOME</th>
+            <th>ABOUT</th>
+            <th>SERVICES</th>
+            <th>PORTFOLIO</th>
+            <th>CONTACT</th>
+            <th>EN</th>
+            <th>|</th>
+            <th>SR</th>
+            
+        </tr>
+    </table>
+ 
 </div>
 
 <div class="homepagephotos">
@@ -21,6 +26,7 @@
 
 <div class="aboutsection">
     <h1 id="aboutheader">About</h1>
+    
     <img src="photos/clientimage.jpg" alt="clientimage">
     <p id="aboutinfo">
         Rodjena u Beogradu. Pohadjala studije Arhitekture u Beogradu I diplomirala 2002 godine (M.Arch.) Na
