Added button function to header along with some comments

--- a/index.html
+++ b/index.html
@@ -2,31 +2,35 @@
     <title>LDesign</title>
 </head>
 
+<!--  
+Website Header
+--> 
 <div class="headerbuttons">
-    <table style="width:100%">
+    <table>
         <tr>
             <th>L E D A     L I T R I C I N</th>
-            <th>HOME</th>
-            <th>ABOUT</th>
-            <th>SERVICES</th>
-            <th>PORTFOLIO</th>
-            <th>CONTACT</th>
-            <th>EN</th>
+            <th><button class="homebutton">HOME</button></th>
+            <th><button class="aboutbutton">ABOUT</button></th>
+            <th><button class="servicesbutton">SERVICES</button></th>
+            <th><button class="portfoliobutton">PORTFOLIO</button></th>
+            <th><button class="contactbutton">CONTACT</button></th>
+            <th><button class="englishbutton">EN</button></th>
             <th>|</th>
-            <th>SR</th>
+            <th><button class="serbianbutton">SR</button></th>
             
         </tr>
     </table>
- 
 </div>
 
 <div class="homepagephotos">
     <img src="photos/whiteandblackkitchentabletvhouse.jpg" alt="whiteandblackkitchentabletvhouse">
 </div>
 
+<!--  
+About Section
+--> 
 <div class="aboutsection">
     <h1 id="aboutheader">About</h1>
-    
     <img src="photos/clientimage.jpg" alt="clientimage">
     <p id="aboutinfo">
         Rodjena u Beogradu. Pohadjala studije Arhitekture u Beogradu I diplomirala 2002 godine (M.Arch.) Na
@@ -43,6 +47,9 @@
     </p>
 </div>
 
+<!--  
+Services Section
+--> 
 <div class="servicessection">
     <h1 id="servicesheader">Services</h1>
     <p id="servicesinfo">
@@ -67,6 +74,9 @@
     </p>
 </div>
 
+<!--  
+Process Section
+--> 
 <div class="processsection">
     <h1 id="processheader">Process</h1>
     <p id="processinfo">
