added portfiolio and contact headers

--- a/index.html
+++ b/index.html
@@ -116,3 +116,17 @@ Process Section
         REKLI SU…………………………………..(ovo tek treba da nabavim od svojih bivsih klijenata)
     </p>
 </div>
+
+<!--  
+Portfolio Section
+--> 
+<div class="portfoliosection">
+    <h1 id="portfolioheader">Portfolio</h1>
+</div>
+
+<!--  
+Contact Section
+--> 
+<div class="contactsection">
+    <h1 id="portfolioheader">Contact</h1>
+</div>
