added photos to portfolio (some are temporary)

--- a/index.html
+++ b/index.html
@@ -122,6 +122,20 @@ Portfolio Section
 --> 
 <div class="portfoliosection">
     <h1 id="portfolioheader">Portfolio</h1>
+    <table>
+        <tr>
+            <th><img src="photos/greencouchhouse.jpg"></th>
+            <th><img src="photos/whitekitchentable.jpg"></th>
+            <th><img src="photos/whiteandblackkitchentabletvhouse.jpg"></th>
+            <th><img src="photos/whitecitybed.jpg"></th>
+        </tr>
+        <tr>
+            <th><img src="photos/brownchairlivingroom.jpg"></th>
+            <th><img src="photos/shower+whitekitchen.png"></th>
+            <th><img src="photos/whiteandblackkitchentabletvhouse.jpg"></th>
+            <th><img src="photos/whitecitybed.jpg"></th>
+        </tr>
+    </table>
 </div>
 
 <!--  
