added a few comments

--- a/index.html
+++ b/index.html
@@ -131,9 +131,9 @@ Portfolio Section
         </tr>
         <tr>
             <th><img src="photos/brownchairlivingroom.jpg"></th>
-            <th><img src="photos/shower+whitekitchen.png"></th>
-            <th><img src="photos/whiteandblackkitchentabletvhouse.jpg"></th>
-            <th><img src="photos/whitecitybed.jpg"></th>
+            <th><img src="photos/shower+whitekitchen.png"></th> <!-- change image to something original-->
+            <th><img src="photos/whiteandblackkitchentabletvhouse.jpg"></th> <!-- change image to something original-->
+            <th><img src="photos/whitecitybed.jpg"></th> <!-- change image to something original-->
         </tr>
     </table>
 </div>
