Added scroll down to section function to header buttons

--- a/index.html
+++ b/index.html
@@ -5,15 +5,16 @@
 <!--  
 Website Header
 --> 
-<div class="headerbuttons">
+<div id="headerbuttons">
     <table>
         <tr>
             <th>L E D A     L I T R I C I N</th>
-            <th><button class="homebutton">HOME</button></th>
-            <th><button class="aboutbutton">ABOUT</button></th>
-            <th><button class="servicesbutton">SERVICES</button></th>
-            <th><button class="portfoliobutton">PORTFOLIO</button></th>
-            <th><button class="contactbutton">CONTACT</button></th>
+            <th><a href="#homepagephotos">HOME</a></th>
+            <th><a href="#aboutsection">ABOUT</a></th>
+            <th><a href="#servicessection">SERVICES</a></th>
+            <th><a href="#processsection">PROCESS</a></th>
+            <th><a href="#portfoliosection">PORTFOLIO</a></th>
+            <th><a href="#contactsection">CONTACT</a></th>
             <th><button class="englishbutton">EN</button></th>
             <th>|</th>
             <th><button class="serbianbutton">SR</button></th>
@@ -22,14 +23,14 @@ Website Header
     </table>
 </div>
 
-<div class="homepagephotos">
+<div id="homepagephotos">
     <img src="photos/whiteandblackkitchentabletvhouse.jpg" alt="whiteandblackkitchentabletvhouse">
 </div>
 
 <!--  
 About Section
 --> 
-<div class="aboutsection">
+<div id="aboutsection">
     <h1 id="aboutheader">About</h1>
     <table>
         <tr>
@@ -54,7 +55,7 @@ About Section
 <!--  
 Services Section
 --> 
-<div class="servicessection">
+<div id="servicessection">
     <h1 id="servicesheader">Services</h1>
     <p id="servicesinfo">
         Oblast rada ukljucuje DIZAJN - IZVODJENJE - OPREMANJE , za sve vrste stambenih prostora/enterijera,
@@ -81,7 +82,7 @@ Services Section
 <!--  
 Process Section
 --> 
-<div class="processsection">
+<div id="processsection">
     <h1 id="processheader">Process</h1>
     <p id="processinfo">
         Proces saradnje uvek zapocinje upoznavanjem kroz otvoreni razgovor o tome ko je moj Klijent, I kako
@@ -124,7 +125,7 @@ Process Section
 <!--  
 Portfolio Section
 --> 
-<div class="portfoliosection">
+<div id="portfoliosection">
     <h1 id="portfolioheader">Portfolio</h1>
     <table>
         <tr>
@@ -145,6 +146,6 @@ Portfolio Section
 <!--  
 Contact Section
 --> 
-<div class="contactsection">
+<div id="contactsection">
     <h1 id="portfolioheader">Contact</h1>
 </div>
