--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 
+    <link rel="stylesheet" type="text/css" href="style.css">
+    
     <head>
         <title>LDesign</title>
     </head>
