Added homepage image change on click functionality and smooth scroll

--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
 
     <link rel="stylesheet" type="text/css" href="style.css">
-    
+    <script type="text/javascript" src="main.js"></script>
+
     <head>
         <title>LDesign</title>
     </head>
@@ -29,7 +30,7 @@
     </div>
 
     <div id="homepagephotos">
-      <img src="photos/whiteandblackkitchentabletvhouse.jpg" alt="whiteandblackkitchentabletvhouse">
+      <img id="123" src="photos/whiteandblackkitchentabletvhouse.jpg" alt="" onclick="changeImage()" >
     </div>
 
     <!--  
