added basic css to homepage

--- a/index.html
+++ b/index.html
@@ -29,9 +29,7 @@
      </table>
     </div>
 
-    <div id="homepagephotos">
-      <img id="123" src="photos/whiteandblackkitchentabletvhouse.jpg" alt="" onclick="changeImage()" >
-    </div>
+    <img id="homeimages" src="photos/whiteandblackkitchentabletvhouse.jpg" alt="" onclick="changeImage()">
 
     <!--  
     About Section
