added input fields and submit button for contact section

--- a/index.html
+++ b/index.html
@@ -152,6 +152,13 @@
     --> 
     <div id="contactsection">
         <h1 id="portfolioheader">Contact</h1>
+
+        <input type="text" id="name" name="name" placeholder="Full Name">
+        <input type="email" id="email" name="email" placeholder="Email Address">
+        <input type="tel" id="phone" name="phone" placeholder="Phone Number">
+        <input type="text" id="message" name="message" placeholder="General Message">
+        <button class="submitbutton">Submit Form</button>
+
     </div>
 
 </html>
