changed portfolio image sizes

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
     --> 
     <div id="portfoliosection">
         <h1 id="portfolioheader">Portfolio</h1>
-        <table>
+        <table id="portfoliotable">
             <tr>
                 <th><img src="photos/greencouchhouse.jpg"></th>
                 <th><img src="photos/whitekitchentable.jpg"></th>
