Fixed image sizing, completed header

--- a/index.html
+++ b/index.html
@@ -1,9 +1,12 @@
+<!DOCTYPE html>
+<link rel="stylesheet" type="text/css" href="style.css">
+
 <head>
     <title>LDesign</title>
 </head>
 
 <div class="headerbuttons">
-    <table style="width:100%">
+    <table style="width:95%">
         <tr>
             <th>L E D A     L I T R I C I N</th>
             <th>HOME</th>
@@ -15,13 +18,13 @@
             <th>|</th>
             <th>SR</th>
             
-        </tr>
+        </tr> 
     </table>
  
 </div>
 
 <div class="homepagephotos">
-    <img src="photos/whiteandblackkitchentabletvhouse.jpg" alt="whiteandblackkitchentabletvhouse">
+    <img onclick="main.fade1()" id = "slide1" class="slide" src="photos/whiteandblackkitchentabletvhouse.jpg" alt="whiteandblackkitchentabletvhouse">
 </div>
 
 <div class="aboutsection">
